--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -135,4 +135,4 @@ disqus-identifier: clintbird
 
 #-------------------------------
 # Google Analytics
-google-analytics: UA-47856899-1
+google-analytics: G-ZGNEJ3RZ6F
