--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -98,8 +98,8 @@ footer__description: A 40 something year old father, husband, lean, digital enth
 social:
 - {icon: "logo-linkedin", link: "https://linkedin.com/in/clintjb"}
 - {icon: "logo-github", link: "https://github.com/clintjb"}
-- {icon: "logo-youtube", link: "https://listenbrainz.org/user/clintjb"}
-- {icon: "logo-whatsapp", link: "/contact/"}
+- {icon: "md-headset", link: "https://listenbrainz.org/user/clintjb"}
+- {icon: "md-mail", link: "/contact/"}
 - {icon: "logo-rss", link: "https://www.clintbird.com/feed.xml"}
 
 # Icons at https://ionicons.com/v4/
