--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -3,7 +3,7 @@
 title: Clint Bird
 logo: /images/logo.gif
 logo_dark: /images/logo-dark.gif
-description: 40 something year old digital / lean enthusiast and aspiring chef. 20+ years experience in operations, digitalization, cost reduction and project management.
+description: 40 something year old digital / lean enthusiast and aspiring chef. 20+ years experience in operations, supply chain, digitalization, cost reduction and project management.
 color_scheme: auto
 
 
@@ -38,7 +38,7 @@ hero:
 # Author Global Settings
 author:
   author__name: Clint Bird
-  author__bio: 40 something year old digital / lean enthusiast and aspiring chef. 20+ years experience in operations, digitalization, cost reduction and project management.
+  author__bio: 40 something year old digital / lean enthusiast and aspiring chef. 20+ years experience in operations, supply chain, digitalization, cost reduction and project management.
   author__avatar: /images/avatar.gif
 
 
@@ -69,8 +69,8 @@ tag__settings:
 # Author Section Settings
 author__section:
   enable: false
-  author__section__title: Hi I'm Clint,
-  author__section__description: A 40 something year old father, husband, lean, digital enthusiast and aspiring chef! I'm originally from Australia, but due to some of life's unforeseen adventures am now happily settled in Hamburg Germany.<br><br>I'm really passionate about lean, technology, continuous improvement and applying the principles to all parts of my life - be it data science, business transformation or BBQ'ing!<br><br>I've set this site up to act mainly just as a repository of stuff I find interesting & fun - hopefully, others find it the same as well. If you would like to connect with me, share a story or just have a chat about anything, then feel free to have a look around and get in touch.
+  author__section__title: Hi, I'm Clint
+  author__section__description: A 40 something year old father, husband, lean, digital enthusiast and aspiring chef! Originally from Australia, but due to some of life's unforeseen adventures am now happily settled in Hamburg Germany.<br><br>I'm deeply passionate about lean, technology, continuous improvement, and I love applying these principles to every aspect of my life — whether it's data science, business transformation, or BBQing!<br><br>I've set this site up to act mainly just as a repository of stuff I find interesting & fun - hopefully, others find it the same as well. If you'd like to connect, share a story, or just chat about anything, feel free to explore the site and get in touch.
   aurhor__section__button__text: More About Me
   aurhor__section__button__link: /cv
   author__section__big__image: /images/clint.webp
@@ -91,7 +91,7 @@ mailchimp__settings:
 
 #-------------------------------
 # Footer Settings
-footer__description: A 40 something year old father, husband, lean, digital enthusiast and aspiring chef! I'm originally from Australia, but due to some of life's unforeseen adventures am now happily settled in Hamburg Germany.<br><br>In my spare time <strike>I'm also</strike> <i>I was</i> also the co-founder of the <strike>social</strike> <i>failed</i> startup  <a href="https://clintbird.com/blog/weave-post">Weave</a>. Our ultimate goal was to help users explore and share meaningful moments through their social network.<br><br>I'm really passionate about lean, continuous improvement and applying the principles to all parts of my life - be it data science, business transformation or BBQ'ing!<br><br>I've set this site up to act mainly just as a repository of stuff I find interesting & fun - hopefully, others find it the same as well. If you would like to connect with me, share a story or just have a chat about anything, then feel free to have a look around and get in touch.
+footer__description: A 40 something year old father, husband, lean, digital enthusiast and aspiring chef! Originally from Australia, but due to some of life's unforeseen adventures am now happily settled in Hamburg Germany.<br><br>I'm deeply passionate about lean, technology, continuous improvement, and I love applying these principles to every aspect of my life — whether it's data science, business transformation, or BBQing!<br><br>I've set this site up to act mainly just as a repository of stuff I find interesting & fun - hopefully, others find it the same as well. If you'd like to connect, share a story, or just chat about anything, feel free to explore the site and get in touch.
 
 
 # Social Links
@@ -126,7 +126,7 @@ footer__menu__settings:
 # Contact Settings
 contact:
   email: xjvjyrol
-  description: If you would like to connect with me, share a story or just have a chat about anything, then feel free to have a look around and get in touch.
+  description: If you'd like to connect, share a story, or just chat about anything, feel free to explore the site and get in touch.
 
 
 #-------------------------------
