Contact Description Update

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -126,7 +126,7 @@ footer__menu__settings:
 # Contact Settings
 contact:
   email: xjvjyrol
-  description: If you'd like to connect, share a story, or just chat about anything, feel free to explore the site and get in touch.
+  description: If you'd like to connect, share a story, or just chat about anything, feel free to drop me a line below:
 
 
 #-------------------------------
